@@ -94,7 +94,7 @@ typedef struct apr_queue_t apr_queue_t;
  * @param a pool to allocate queue from
  */
 APU_DECLARE(apr_status_t) apr_queue_create(apr_queue_t **queue, 
-                                           int queue_capacity, 
+                                           apr_size_t queue_capacity, 
                                            apr_pool_t *a);
 
 /**
@@ -151,7 +151,7 @@ APU_DECLARE(apr_status_t) apr_queue_trypop(apr_queue_t *queue, void **data);
  * @param queue the queue
  * @returns the size of the queue
  */
-APU_DECLARE(int) apr_queue_size(apr_queue_t *queue);
+APU_DECLARE(apr_size_t) apr_queue_size(apr_queue_t *queue);
 
 /**
  * interrupt all the threads blocking on this queue.
